EXTRA_DIST = README.document \
	architecture.svg \
	architecture.txt \
	class-hierarchy.dia \
	coordinates.txt \
	HACKING.de.txt \
	HACKING.fr.txt \
	HACKING.it.txt \
	HACKING.pt_BR.txt \
	HACKING.txt \
	keys.css \
	keys.README \
	keys.be.html\
	keys.de.html \
	keys.el.html \
	keys.en.html \
	keys.fr.html \
	keys.ja.html \
	keys.zh_TW.html \
	refcounting.txt
