
exampledir = $(datadir)/inkscape/examples

example_DATA = \
	README \
	istest.pov \
	gradient.svg \
	tiger.svgz \
	markers.svg \
	i18n.svg \
	stars.svgz \
	text-on-path.svg \
	flowsample.svg \
	data_uri.svg \
	tesselation-P3.svg \
	art-nouveau-P3.svg \
	eastern-motive-P4G.svg \
	l-systems.svgz \
	glass.svg \
	car.svgz

EXTRA_DIST = $(example_DATA)
