
exampledir = $(datadir)/inkscape/examples

example_DATA = \
	README \
	istest.pov \
	gradient.svg \
	tiger.svgz \
	markers.svg \
	i18n.svg \
	stars.svgz \
	text-on-path.svg \
	flowsample.svg \
	data_uri.svg \
	tesselation-P3.svg \
	art-nouveau-P3.svg \
	eastern-motive-P4G.svg \
	l-systems.svgz \
	glass.svg \
	car.svgz \
	gallardo.svgz \
	gradient-mesh-experimental.svgz \
	rope-3D.svg \
	animated-clock.svg \
	blend_modes.svg \
	flow-go.svg \
	lighting_filters.svg \
	turbulence_filters.svg \
	live-path-effects-curvestitch.svg \
	live-path-effects-gears.svg \
	live-path-effects-pathalongpath.svg \
	filters.svg \
	svgfont.svg \
	tref.svg \
	replace-hue.svg

EXTRA_DIST = $(example_DATA)
