SUBDIRS = hicolor

iconsdir = $(datadir)/inkscape/icons

pixmaps = \
	remove-color.png \
	remove-color.svg \
    ticotico.jpg \
	feBlend-icon.png \
    feBlend-icon.svg \
	feColorMatrix-icon.png \
    feColorMatrix-icon.svg \
	feComposite-icon.png \
    feComposite-icon.svg \
	feConvolveMatrix-icon.png \
    feConvolveMatrix-icon.svg \
	feDiffuseLighting-icon.png \
    feDiffuseLighting-icon.svg \
	feDisplacementMap-icon.png \
    feDisplacementMap-icon.svg \
	feFlood-icon.png \
    feFlood-icon.svg \
	feGaussianBlur-icon.png \
    feGaussianBlur-icon.svg \
    feImage-icon.png \
    feImage-icon.svg \
	feMerge-icon.png \
    feMerge-icon.svg \
	feMorphology-icon.png \
    feMorphology-icon.svg \
	feOffset-icon.png \
    feOffset-icon.svg \
	feSpecularLighting-icon.png \
    feSpecularLighting-icon.svg \
	feTurbulence-icon.png \
    feTurbulence-icon.svg

icons_DATA = \
	$(pixmaps) \
	inkscape.svg \
	\
	icons.svg \
	legacy_icons.svg \
	tango_icons.svg \
	\
	inkscape.file.svg \
	inkscape.file.png \
	\
	README.icon_themes \
	README.legacy_icons 
	
EXTRA_DIST = $(icons_DATA)

