
palettesdir = $(datadir)/inkscape/palettes

palettes_DATA = \
    README \
    Blues.gpl \
    echo-palette.gpl \
    Gold.gpl \
    Greens.gpl \
    Gray.gpl \
    Hilite.gpl \
    inkscape.gpl \
    LaTeX-Beamer.gpl \
    Khaki.gpl \
    MATLAB-Jet-72.gpl \
    Reds.gpl \
    Royal.gpl \
    svg.gpl \
    Tango-Palette.gpl \
    Topographic.gpl \
    Ubuntu.gpl \
    webhex.gpl \
    websafe22.gpl \
    windowsXP.gpl     

EXTRA_DIST = $(palettes_DATA)
