
screensdir = $(datadir)/inkscape/screens

screens_DATA = \
	about.svg\
	about.be.svg\
	about.bg.svg\
	about.br.svg\
	about.es.svg\
	about.fi.svg\
	about.fr.svg\
	about.gl.svg\
	about.hu.svg\
	about.it.svg\
	about.nl.svg\
	about.pl.svg\
	about.pt_BR.svg\
	about.ru.svg\
	about.sk.svg\
	about.sl.svg\
	about.uk.svg

EXTRA_DIST = $(screens_DATA)

