
templatesdir = $(datadir)/inkscape/templates

templates_DATA = \
	README \
	default.svg \
	A4_landscape.svg \
	A4.svg \
	black_opaque.svg \
	business_card_90x50mm.svg \
	CD_cover_300dpi.svg \
	default.svg \
	default.cs.svg \
	default.de.svg \
	default.es.svg \
	default.fi.svg \
	default.fr.svg \
	default.hu.svg \
	default.it.svg \
	default.pl.svg \
	default_mm.svg \
	default_pt.svg \
	desktop_1024x768.svg \
	desktop_1600x1200.svg \
	desktop_640x480.svg \
	desktop_800x600.svg \
	icon_16x16.svg \
	icon_32x32.svg \
	icon_48x48.svg \
	icon_64x64.svg \
	Letter_landscape.svg \
	Letter.svg \
	no_borders.svg \
	no_layers.svg \
	web_banner_468x60.svg \
	web_banner_728x90.svg \
	white_opaque.svg

EXTRA_DIST = $(templates_DATA)