
tutorialdir = $(datadir)/inkscape/tutorials

tutorial_DATA = \
    README \
    gpl-2.svg	\
    tutorial-elements.svg \
    tutorial-elements.fr.svg \
    tutorial-elements.es.svg \
    tutorial-elements.sl.svg \
    tutorial-tips.svg \
    tutorial-tips.es.svg \
    tutorial-tips.fr.svg \
    tutorial-tips.sl.svg \
    making_markers.svg \
    tutorial-advanced.svg \
    tutorial-advanced.es.svg \
    tutorial-advanced.fr.svg \
    tutorial-advanced.ja.svg \
    tutorial-advanced.sl.svg \
    tutorial-basic.svg \
    tutorial-basic.ca.svg \
    tutorial-basic.de.svg \
    tutorial-basic.es.svg \
    tutorial-basic.fr.svg \
    tutorial-basic.ja.svg \
    tutorial-basic.nn.svg \
    tutorial-basic.ru.svg \
    tutorial-basic.sl.svg \
    tutorial-calligraphy.svg \
    tutorial-calligraphy.es.svg \
    tutorial-calligraphy.fr.svg \
    tutorial-calligraphy.sl.svg \
    tutorial-shapes.svg \
    tutorial-shapes.ca.svg \
    tutorial-shapes.es.svg \
    tutorial-shapes.fr.svg \
    tutorial-shapes.ja.svg \
    tutorial-shapes.sl.svg \
    tutorial-tracing.svg potrace.png oldguitar.jpg tux.png \
    tutorial-tracing.de.svg potrace-de.png \
    tutorial-tracing.es.svg \
    tutorial-tracing.fr.svg potrace-fr.png \
    tutorial-tracing.sl.svg



EXTRA_DIST = $(tutorial_DATA)

